[project]
name = "llamaindex"
version = "0.1.0"
description = "LlamaIndex and OpenAI to extract structured data from a PDF invoice"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "llama-index>=0.13.0",
    "psycopg2-binary>=2.9.10",
    "pydantic>=2.11.7",
    "sqlalchemy>=2.0.42",
]
